--- a/FasterPDAScan.csproj
+++ b/FasterPDAScan.csproj
@@ -66,7 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FastPDAScanPlugin.cs" />
+    <Compile Include="FasterPDAScanPlugin.cs" />
     <Compile Include="ModConfig.cs" />
     <Compile Include="PDAScannerPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
